# hm-type-system

./: .gitignore  LICENSE  Makefile  README.md  default.nix  fourmolu.yaml  hm-type-system.cabal  shell.nix
app/: Main.hs
examples/: Main.hs
lib/: HM.hs
lib/HM/: Env.hs  Expr.hs  Infer.hs  NameSeed.hs  Pretty.hs  Result.hs  TypeExpr.hs
lib/HM/Env/: DataTypeEnv.hs  TypeEnv.hs
lib/HM/Type/: Ops.hs  Subst.hs  TypeExpr.hs  TypeScheme.hs  Unification.hs
nix/: pinned.nix
