cabal-version:      2.4
name:               hm-type-system
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jeogod
maintainer:         hi@jeova.ninja

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
  build-depends:       base ^>= 4.14.1,
                       bytestring ^>= 0.10.12,
                       word8 ^>= 0.1.3,
                       containers
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hm-type-system
    import: deps
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    build-depends:    hm-type-system

library
    import:           deps
    hs-source-dirs:   lib
    build-depends:    pretty-simple
    exposed-modules:  HM, HM.Infer, HM.Expr, HM.TypeExpr, HM.Pretty, HM.NameSeed
