cabal-version:      2.4
name:               hm-type-system
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jeogod
maintainer:         hi@jeova.ninja

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
  build-depends:       base,
                       bytestring,
                       word8,
                       containers

  ghc-options:         -Wall
  default-language:    Haskell2010

executable example 
    import:           deps
    main-is:          Main.hs
    scope:            private

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   examples
    build-depends:    hm-type-system

library
    import:           deps
    hs-source-dirs:   lib
    build-depends:    pretty-simple
    exposed-modules:  HM, HM.Env, HM.Infer, HM.NameSeed, HM.Pretty, HM.Result, HM.Expr,
                      HM.Env.DataTypeEnv, HM.Env.TypeEnv,
                      HM.Type.Ops, HM.Type.Subst, HM.Type.TypeExpr,
                      HM.Type.TypeScheme, HM.Type.Unification
                      
